# cloudacademy-crawler

./: .gitignore  README.md  aws_course_spider.py  course_spider.py  pyproject.toml  requirements.txt  setup.py  text.json  video_spider.py
utils/: blob_directory_interface.py
