[tool.poetry]
name = "cloudacademy-crawler"
version = "1.0"
description = "A simple cloudacademy course crawling & downloading tool"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "^2.3.0"
requests = "^2.24.0"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
